--- a/web/test.html
+++ b/web/test.html
@@ -8,6 +8,7 @@
   <body>
     <h1 id="test">Use this to test the server by sending stuff by hand...</h1>
     <script src="./js/engine.io.js"></script>
+    <script src="./js/forge-sha256.js"></script>
     <script>
       var socket = eio('ws://localhost:8080');
       socket.on('open', function(){
