--- a/web/app.html
+++ b/web/app.html
@@ -49,7 +49,7 @@
 		<!-- Share This Chat Modal -->
 		<div class="modal" v-if="ui.displayShareChatPrompt">
 			<h1>Share this chat</h1>
-			<p>To share this chat, please invite your friends using this URL:<br><span class="url">http://www.freech.com/app.html?{{ chat.chatId }}</span></p>
+			<p>To share this chat, please invite your friends using this URL.<br><span class="url">http://138.68.74.109/app.html?{{ chat.chatId }}</span></p>
 			<a href="javascript:void(0)" v-on:click="buttonCloseShare" class="button">Done</a>
 		</div>
 		
