Added Index Page
* The chat app now has a nice landing page
* The actual chat now has the title "Freech - Chat"
* Max Image height downscaled to 500px

--- a/web/chat.html
+++ b/web/chat.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 		<!-- Title -->
-		<title>Freech</title>
+		<title>Freech - Chat</title>
 		<!-- Fonts & Css -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link href="./css/chat.css" rel="stylesheet" type="text/css">
