--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<!-- Meta Stuff -->
 		<meta charset="utf-8">
-		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+		<meta name="viewport" content="initial-scale=0.8, maximum-scale=0.8">
 		<!-- Title -->
 		<title>Freech</title>
 		<!-- Fonts & Css -->
@@ -30,6 +30,13 @@
 				<p>Anyone can create a chat and invite his friends using an URL. A browser is all you need to participate.</p>
 				<a href="/chat" class="button">Open Your Own Chat</a>
 			</div>
+			<!-- Privacy -->
+			<div class="feature mask">
+				<span class="icon"></span>
+				<h1>True Privacy</h1>
+				<p>Choose a name. Be who you want. Know that the chat will disappear tomorrow.</p>
+				<a href="/chat" class="button">Become Sherlock Holmes</a>
+			</div>
 			<!-- Attachments -->
 			<div class="feature camera">
 				<span class="icon"></span>
@@ -37,27 +44,27 @@
 				<p>Easily share images with everyone in the chat.</p>
 				<a href="/chat" class="button">Share Picture With Your Friends</a>
 			</div>
-			<!-- Prvacy -->
-			<div class="feature mask">
-				<span class="icon"></span>
-				<h1>True Privacy</h1>
-				<p>Choose a name. Be who you want. Know that the chat will disappear tomorrow.</p>
-				<a href="/chat" class="button">Become Sherlock Holmes</a>
-			</div>
 			<!-- Security -->
 			<div class="feature lock">
 				<span class="icon"></span>
 				<h1>Built In Security</h1>
-				<p>All chats use modern ssl encryption and automatically protect you against identity theft.</p>
+				<p>All chats use modern SSL encryption and automatically protect you against identity theft.</p>
 				<a href="/chat" class="button">Encrypt Some Messages</a>
+			</div>
+			<!-- Open Source -->
+			<div class="feature laptop">
+				<span class="icon"></span>
+				<h1>Open Source</h1>
+				<p>All of Freech's code is openly accessible. Read it, tinker with it, and help us improve it if you want.</p>
+				<a href="/" class="button">View Source Code</a>
 			</div>
 		</div>
 		
 		<!-- Footer Links -->
 		<div class="footer">
 			<a href="/chat">Create a chat</a>
-			<a href="">Terms and conditions</a>
-			<a href="">Privacy</a>
+			<a href="/">Terms and conditions</a>
+			<a href="/">Privacy</a>
 		</div>
 	</body>
 	
