--- a/web/index.html
+++ b/web/index.html
@@ -45,19 +45,19 @@
 				<a href="/chat" class="button">Share Picture With Your Friends</a>
 			</div>
 			<!-- Security -->
-			<div class="feature lock">
+			<!--div class="feature lock">
 				<span class="icon"></span>
 				<h1>Built In Security</h1>
 				<p>All chats use modern SSL encryption and automatically protect you against identity theft.</p>
 				<a href="/chat" class="button">Encrypt Some Messages</a>
-			</div>
+			</div-->
 			<!-- Open Source -->
-			<div class="feature laptop">
+			<!--div class="feature laptop">
 				<span class="icon"></span>
 				<h1>Open Source</h1>
 				<p>All of Freech's code is openly accessible. Read it, tinker with it, and help us improve it if you want.</p>
 				<a href="/" class="button">View Source Code</a>
-			</div>
+			</div-->
 		</div>
 		
 		<!-- Footer Links -->
