Typing indication and ui fix
* Added an indication that a user is typing
* Fixed a problem with the sidebar ui
* Added the SSL element back to the index page

--- a/web/index.html
+++ b/web/index.html
@@ -45,12 +45,12 @@
 				<a href="/chat" class="button">Share Picture With Your Friends</a>
 			</div>
 			<!-- Security -->
-			<!--div class="feature lock">
+			<div class="feature lock">
 				<span class="icon"></span>
 				<h1>Built In Security</h1>
 				<p>All chats use modern SSL encryption and automatically protect you against identity theft.</p>
 				<a href="/chat" class="button">Encrypt Some Messages</a>
-			</div-->
+			</div>
 			<!-- Open Source -->
 			<!--div class="feature laptop">
 				<span class="icon"></span>
