New Data Source To be implemented
* The new data source is now largely implemented with the server and
client
* There are still some bugs to be fixed
* Images need to be changed on the client
* Server needs to be able to server images

--- a/web/chat.html
+++ b/web/chat.html
@@ -40,7 +40,7 @@
 				<!-- The loading indicator -->
 				<span class="notice" v-show="freechTemp.loadingOldMessages" v-if="freechTemp.totalMessageCount !== freechTemp.messages.length && freechTemp.totalMessageCount !== -1">Loading ...</span>
 				<!-- The no messages indicator -->
-				<span class="notice" v-if="freechTemp.totalMessageCount === -1">No messages</span>
+				<span class="notice" v-if="freechTemp.totalMessageCount === -1 || freechTemp.totalMessageCount === 0">No messages</span>
 
 				<!-- The load old button -->
 				<a href="javascript:void(0)" v-if="freechTemp.totalMessageCount !== freechTemp.messages.length && freechTemp.totalMessageCount !== -1" v-show="!freechTemp.loadingOldMessages"  class="button" v-on:click="buttonLoadOldMessages">Load Old Messages</a>
