--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,6 @@
 		<!-- The Header Graphic -->
 		<div class="header">
 			<h1>Freech</h1>
-			<img class="screenshot" src="./images/chat.svg">
 		</div>
 
 		<!-- The Main Content -->
@@ -45,12 +44,12 @@
 				<a href="/chat" class="button">Share Picture With Your Friends</a>
 			</div>
 			<!-- Security -->
-			<div class="feature lock">
+			<!--div class="feature lock">
 				<span class="icon"></span>
 				<h1>Built In Security</h1>
 				<p>All chats use modern SSL encryption and automatically protect you against identity theft.</p>
 				<a href="/chat" class="button">Encrypt Some Messages</a>
-			</div>
+			</div-->
 			<!-- Open Source -->
 			<!--div class="feature laptop">
 				<span class="icon"></span>
